--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 
 
   <script src="scripts/app.js"></script>
+  <script src="scripts/theme.js"></script>
+  <script src="scripts/toggleBtn.js"></script>
 </main>
 
 </body>
